--- a/PassXYZLib/Resources/PxRes.resx
+++ b/PassXYZLib/Resources/PxRes.resx
@@ -117,6 +117,9 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="message_id_cloud_config" xml:space="preserve">
+    <value>Please fill in cloud storage configuration.</value>
+  </data>
   <data name="RecycleBin" xml:space="preserve">
     <value>Recycle Bin</value>
   </data>
